Fix ordering issue with proxy_auth ACL.

--- a/confs/geodeny.squid.conf
+++ b/confs/geodeny.squid.conf
@@ -17,8 +17,6 @@ acl Safe_ports port 443		# https
 acl Safe_ports port 3128
 
 acl guest src 0.0.0.0/0		# add any IP src restrictions
-acl user proxy_auth REQUIRED
-acl unamed proxy_auth someusers	# any user restrictions
 
 # Configured to use auth digest; store passwords in 2nd file
 # Start here: http://wiki.squid-cache.org/Features/Authentication
@@ -28,6 +26,10 @@ auth_param digest realm myrealm
 auth_param digest nonce_garbage_interval 5 minutes
 auth_param digest nonce_max_duration 30 minutes
 auth_param digest nonce_max_count 50
+
+# Ordering matters; proxy_auth must come after auth_param
+acl user proxy_auth REQUIRED
+acl unamed proxy_auth someusers	# any user restrictions
 
 # define access policies
 http_access deny !Safe_ports
