--- a/confs/geodeny.squid.conf
+++ b/confs/geodeny.squid.conf
@@ -16,20 +16,20 @@ acl Safe_ports port 80		# http
 acl Safe_ports port 443		# https
 acl Safe_ports port 3128
 
-acl guest src 0.0.0.0/0		# add any IP src restrictions
+acl guest src all		# add any IP src restrictions
 
 # Configured to use auth digest; store passwords in 2nd file
 # Start here: http://wiki.squid-cache.org/Features/Authentication
-auth_param digest program /usr/local/squid/libexec/digest_pw_auth /usr/lib/squid/passwd
+auth_param digest program /usr/lib64/squid/digest_pw_auth /etc/squid/passwd 
 auth_param digest children 5
 auth_param digest realm myrealm
 auth_param digest nonce_garbage_interval 5 minutes
 auth_param digest nonce_max_duration 30 minutes
 auth_param digest nonce_max_count 50
 
-# Ordering matters; proxy_auth must come after auth_param
+# must come after the auth_param config else proxy_auth is not recognized
 acl user proxy_auth REQUIRED
-acl unamed proxy_auth someusers	# any user restrictions
+acl unamed proxy_auth awstahl # any user restrictions
 
 # define access policies
 http_access deny !Safe_ports
