Updated atlassian configs to be path-, not host-based

--- a/confs/atlassian-ssl-vhost.conf
+++ b/confs/atlassian-ssl-vhost.conf
@@ -1,48 +1,26 @@
-NameVirtualHost *:443
-<VirtualHost *:443>
-    ServerName tc-confluence
+SSLProxyEngine On
+ProxyRequests Off
+ProxyPreserveHost On
 
-    SSLProxyEngine On
-    SSLEngine On
-    SSLCertificateFile /etc/httpd/certs/tc-confluence-cert.pem
-    SSLCertificateKeyFile /etc/httpd/certs/tc-confluence-key.pem
+SSLCertificateFile /etc/httpd/certs/srv-cert.pem
+SSLCertificateKeyFile /etc/httpd/certs/srv-key.pem
 
-    ProxyRequests Off
-    <Proxy *>
-        Order deny,allow
-        Allow from all
-    </Proxy>
- 
-    ProxyPass / http://tc-devops:8090/
-    ProxyPassReverse / http://tc-devops:8090/
+ProxyPass /confluence http://tc-devops:8090/confluence
+ProxyPassReverse /confluence http://tc-devops:8090/confluence
+<Location /confluence>
+  Order allow,deny
+  Allow from all
+</Location>
 
-    ErrorLog logs/confluence_error.log
-    TransferLog logs/confluence_access.log
-    <Location />
-        Order allow,deny
-        Allow from all
-    </Location>
-</VirtualHost>
-<VirtualHost *:443>
-    ServerName tc-jira
+ProxyPass /jira http://tc-devops:1144/jira
+ProxyPassReverse /jira http://tc-devops:1144/jira
+<Location /jira>
+  Order allow,deny
+  Allow from all
+</Location>
 
-    SSLEngine On
-    SSLCertificateFile /etc/httpd/certs/tc-jira-cert.pem
-    SSLCertificateKeyFile /etc/httpd/certs/tc-jira-key.pem
- 
-    ProxyRequests Off
-    <Proxy *>
-        Order deny,allow
-        Allow from all
-    </Proxy>
- 
-    ProxyPass / http://tc-devops:1144/
-    ProxyPassReverse / http://tc-devops:1144/
+<Proxy *>
+  Order deny,allow
+  Allow from all
+</Proxy>
 
-    ErrorLog logs/jira_error.log
-    TransferLog logs/jira_access.log
-    <Location />
-        Order allow,deny
-        Allow from all
-    </Location>
-</VirtualHost>
