Updated for centos7

--- a/confs/jenkins.conf
+++ b/confs/jenkins.conf
@@ -6,7 +6,7 @@ RequestHeader set X-Forwarded-Proto "https"
 RequestHeader set X-Forwarded-Port "443"
 Header edit Location ^http://testcore.homelinux.net/jenkins/ https://testcore.homelinux.net/jenkins/
 #AllowEncodedSlashes NoDecode
-#ProxyPassMatch ^(/(static|plugin|adjuncts)/.+)$ http://tc-devops:8080/$1
+#ProxyPassMatch ^(/(static|plugin|adjuncts)/.+)$ http://localhost:8080/$1
 #<Location /jenkins>
 #  Order allow,deny
 #  Allow from all
