Moving confluence to /wiki

--- a/confs/atlassian-ssl-vhost.conf
+++ b/confs/atlassian-ssl-vhost.conf
@@ -5,9 +5,9 @@ ProxyPreserveHost On
 SSLCertificateFile /etc/httpd/certs/srv-cert.pem
 SSLCertificateKeyFile /etc/httpd/certs/srv-key.pem
 
-ProxyPass /confluence http://tc-devops:8090/confluence
-ProxyPassReverse /confluence http://tc-devops:8090/confluence
-<Location /confluence>
+ProxyPass /wiki http://tc-devops:8090/wiki
+ProxyPassReverse /wiki http://tc-devops:8090/wiki
+<Location /wiki>
   Order allow,deny
   Allow from all
 </Location>
